[package]
name = "dbdiff"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio-postgres = { version = "0.7.6", features = ["with-chrono-0_4"] }
tokio = { version = "1.18.2", features = ["macros", "rt-multi-thread"] }
chrono = "0.4"
ordered-float = "3.0.0"
