[package]
name = "dbdiff"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
bit-vec = "0.6.3"
chrono = "0.4"
cidr = "0.2.1"
eui48 = "0.4"
futures = "0.3.21"
geo-types = "0.7.4"
openssl = "0.10.38"
ordered-float = "3.0.0"
postgres-openssl = "0.5.0"
postgres-types = { version = "0.2.3",  features = ["with-cidr-0_2"] }
serde = { version = "1.0.132", features = ["derive"] }
serde_json = "1.0"
shellexpand = "1.0.0"
structopt = "0.3.26"
time = "0.3.0"
tokio = { version = "1.18.2", features = ["macros", "rt-multi-thread"] }
tokio-postgres = { version = "0.7.6", features = ["with-chrono-0_4", "with-bit-vec-0_6", "with-geo-types-0_7", "with-serde_json-1", "with-uuid-1", "with-time-0_3", "with-eui48-0_4", "array-impls"] }
uuid = "1.1.2"
whoami = "1.2.3"
users = "0.11.0"

[dependencies.confy]
version = "0.5.1"
features = ["yaml_conf"]
default-features = false
